@@ -13,6 +13,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #20308: inspect.signature now works on classes without user-defined
+  __init__ or __new__ methods.
+
 
 What's New in Python 3.4.0 Beta 3?
 ==================================
